@@ -1,15 +1,27 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2016.4   4.7   2.1.9  TBD (LTS)
-# PE 2016.5   4.8   2.1.9  2017-10-31
-# SIMP6.0.0   4.8   2.1.9  TBD
-# PE 2017.1   4.9   2.1.9  2017-10-31
-# PE 2017.2   4.10  2.1.9  TBD
+# Release       Puppet   Ruby   EOL
+# PE 2017.3     5.3      2.4.5  2018-12-31
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1     5.5.8    2.4.5  2020-05 (LTS)***
+# PE 2019.0     6.0      2.5.1  2019-08-31^^^
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
+
 ---
 language: ruby
 cache: bundler
 sudo: false
+
+stages:
+  - check
+  - spec
+  - name: deploy
+    if: 'tag IS present'
 
 bundler_args: --without development system_tests --path .vendor
 
@@ -23,12 +35,17 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - gem install -v '~> 1.17' bundler
+
+global:
+  - STRICT_VARIABLES=yes
 
 jobs:
   include:
     - stage: check
-      rvm: 2.4.4
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
+      name: 'Syntax, style, and validation checks'
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -40,25 +57,40 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.4.4
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+      name: 'Puppet 5.3 (PE 2017.3)'
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="~> 5.5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 5.x'
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 6.x'
+      rvm: 2.5.1
+      env: PUPPET_VERSION="~> 6.0"
       script:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
         - "export PUPMOD_METADATA_VERSION=`ruby -r json -e \"puts JSON.parse(File.read('metadata.json')).fetch('version')\"`"
         - '[[ $TRAVIS_TAG =~ ^simp-${PUPMOD_METADATA_VERSION}$|^${PUPMOD_METADATA_VERSION}$ ]]'
-
       deploy:
         - provider: releases
           api_key:
@@ -71,3 +103,6 @@ jobs:
           user: simp
           password:
             secure: "YLRv3cKwVbZrberLIfHSSwBpPFv54PLgIXpxYnjKLhuc2zOQmLIPq3ywe7Y8/VH7kxnk9r2w/+qktw5cL0ESeh6msyKnfSKwnHL1nuFj0MysgIl1d1EvfGXOubEICjv/iO5vxS8LNDxcQfDeGYYxmXnqQVw/L+/i6nd2oE8AqKs0Az4uBVjIYy71ilX47dwFFVfbLM1R91zcTI8SU3xRDzAwtOg3RmzDTmufDPgrw5ijy2GATjg4dyro/ck2J92L+PMqH+hwkPAITfVQsEIdhT6fh12n1owYv09foLBqGH9daYu5r8qWlIxr8DAzuQZU6UeRd6IkSnIk0xCj1WBK5sQwBwdEAELLBU8bU44mNBNJ4CScIhoMRHZGw+oMeuzOHxKYByBF6P2ifssHfphq2gweZRuFJKyvDgRdh0q5WBzCucJIWRV+9C/AD5udfp1NbVqaH56AP5FC9HrGQpyz/YjwGK0B6edM6xG31FHbP+PKWRvs1Q4Tczg87W77UNRO2cH2W4a0t2EK9zfbxVykl9iz6v5Muk13R9quRbnT2A7osRd6BAqSofsYYFOWQ1nfaoi54wFA+fLBxNCFpxBmWXOUHxQ8RRARYnkaEv8tyyE490y7ikapMhMu0YxDW/q8zKQYykGsdgA+W/daH6hRpP3nz+klidTiizPma3Cav/8="
+          on:
+            tags: true
+            condition: '($SKIP_FORGE_PUBLISH != true)'
