@@ -1,3 +1,6 @@
+* Wed May 22 2019 Liz Nemsick <lnemsic.simp@gmail.com.com> - 1.0.7-0
+- Expand the range of Puppet to < 7.0.0
+
 * Wed Oct 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.6-0
 - Refactored the module to work with Puppet > 5.5.6
   - Puppet 5.5.7 broke the Type/Provider interface in the 'group' type so
